# aoc22

./: .gitignore
day01/: CMakeLists.txt  main.cc
day02/: CMakeLists.txt  main.cc  solve.cc
day03/: CMakeLists.txt  main.cc
day04/: CMakeLists.txt  main.cc
day06/: CMakeLists.txt  main.cc  main.py
day06/java/: main.java
day06/py/: main.py
day06_futhark/: CMakeLists.txt  lib.fut  main.cc
day07/: CMakeLists.txt  main.cc
day08/: CMakeLists.txt  main.cc
day10/: CMakeLists.txt  main.cc
day11/: CMakeLists.txt  main.cc
day13/: CMakeLists.txt  main.cc  ç
day14/: CMakeLists.txt  main.cc
day18/: CMakeLists.txt  main.cc
day20/: CMakeLists.txt  main.cc
lib/: utils.hh
